refactor: Implement Google Calendar Service with CRUD operations
- Added CalendarService interface and its implementation (CalendarServiceImpl) for interacting with Google Calendar API.
- Implemented methods for listing, creating, updating, deleting events, and listing calendars.
- Introduced logging using zap for better traceability of operations.
- Added mocks for CalendarService to facilitate testing.
- Updated go.mod and go.sum to include necessary dependencies and tools.

Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -20,6 +20,7 @@ tasks:
     cmds:
       - echo "Generating Go code from JSON RPC Schema..."
       - go run cmd/codegen/main.go -output a2a/generated_types.go
+      - go generate ./...
 
   lint:
     desc: "Run linters on the codebase"
