refactor: Update clean task to remove all build artifacts
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -50,4 +50,4 @@ tasks:
     desc: "Clean up build artifacts"
     cmds:
       - echo "Cleaning up..."
-      - rm -f bin/google-calendar-agent
+      - rm -rf bin/
