feat: Add versioning and help flags to the Google Calendar agent
Also optimize the packaging by leveraging .dockerignore file - copying only what's absolutely necessary.

Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,12 @@
 a2a/a2a-schema.json
 a2a/a2a-schema.yaml
+**_test.go
+cmd/codegen
+internal
+.devcontainer
+.git
+bin
+.github
+README.md
+Taskfile.yaml
+Dockerfile
