--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,12 +1,8 @@
 FROM mcr.microsoft.com/devcontainers/go:1-1.24-bookworm
 
-ENV TASK_VERSION=v3.42.1 \
-    CTLPTL_VERSION=0.8.39 \
-    K3D_VERSION=v5.8.3 \
-    KUBECTL_VERSION=v1.32.3 \
-    HELM_VERSION=v3.17.2 \
-    GORELEASER_VERSION=v2.8.0 \
-    GOLANG_CI_LINT_VERSION=v1.64.7 \
+ENV TASK_VERSION=v3.43.3 \
+    GORELEASER_VERSION=v2.9.0 \
+    GOLANG_CI_LINT_VERSION=v2.1.6 \
     GITHUB_CLI_VERSION=2.68.1 \
     NODE_VERSION=lts \
     SEMANTIC_RELEASE_VERSION=v24.2.3
@@ -21,20 +17,11 @@ RUN apt-get update && \
     echo "Installing depenenices for ${architecture}" && \
     # Install networking utilities
     apt-get install -y iputils-ping dnsutils && \
-    # Install Node.js for Spectral
+    # Install Node.js
     curl -fsSL https://deb.nodesource.com/setup_${NODE_VERSION}.x | bash - && \
     apt-get install -y nodejs && \
     # Install Task
     curl -s https://taskfile.dev/install.sh | sh -s -- -b /usr/local/bin ${TASK_VERSION} && \
-    # Install ctlptl
-    curl -fsSL https://github.com/tilt-dev/ctlptl/releases/download/v${CTLPTL_VERSION}/ctlptl.${CTLPTL_VERSION}.linux.${architecture_pretty}.tar.gz | tar -xzv -C /usr/local/bin ctlptl && \
-    # Install k3d
-    curl -fsSL https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | TAG=${K3D_VERSION} bash && \
-    # Install kubectl
-    curl -fsSL https://dl.k8s.io/release/${KUBECTL_VERSION}/bin/linux/${architecture_pretty}/kubectl -o /usr/local/bin/kubectl && \
-    chmod +x /usr/local/bin/kubectl && \
-    # Install helm
-    curl -fsSL https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | HELM_INSTALL_DIR=/usr/local/bin HELM_VERSION=${HELM_VERSION} bash && \
     # Install GoReleaser
     curl -fsSL https://github.com/goreleaser/goreleaser/releases/download/${GORELEASER_VERSION}/goreleaser_Linux_${architecture_pretty}.tar.gz | tar -xzv -C /usr/local/bin goreleaser && \
     # Install golangci-lint
@@ -44,8 +31,6 @@ RUN apt-get update && \
     tar -xzf /tmp/gh_${GITHUB_CLI_VERSION}_linux_${architecture_pretty}.tar.gz -C /tmp && \
     chmod +x /tmp/gh_${GITHUB_CLI_VERSION}_linux_${architecture_pretty}/bin/gh && \
     mv /tmp/gh_${GITHUB_CLI_VERSION}_linux_${architecture_pretty}/bin/gh /usr/local/bin/gh && \
-    # Install Spectral for OpenAPI linting
-    npm install -g @stoplight/spectral-cli && \
     # Install semantic-release and plugins
     npm install -g semantic-release@${SEMANTIC_RELEASE_VERSION} \
                    @semantic-release/changelog \
@@ -73,9 +58,5 @@ RUN echo 'POWERLEVEL9K_DISABLE_CONFIGURATION_WIZARD=true' >> /home/vscode/.zshrc
 
 # Shell completion
 RUN echo "source <(gh completion -s zsh)" >> /home/vscode/.zshrc && \
-    echo "source <(kubectl completion zsh)" >> /home/vscode/.zshrc && \
-    echo "source <(helm completion zsh)" >> /home/vscode/.zshrc && \
-    echo "source <(k3d completion zsh)" >> /home/vscode/.zshrc && \
-    echo "source <(ctlptl completion zsh)" >> /home/vscode/.zshrc && \
     echo "source <(task --completion zsh)" >> /home/vscode/.zshrc && \
     echo "source <(goreleaser completion zsh)" >> /home/vscode/.zshrc
