--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/setup-go@v5.5.0
         with:
           go-version: "1.24"
+          cache: true
 
       - name: Install Task
         run: |
