--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Install Go tools
         run: |
-          go install github.com/maxbrunsfeld/counterfeiter/v6@latest
+          go install github.com/maxbrunsfeld/counterfeiter/v6@6.11.2
 
       - name: Generate
         run: task generate
