--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,34 @@
-GOOGLE_CALENDAR_ID=
+# Application Configuration
+APP_ENVIRONMENT=dev
+APP_DEBUG=false
+APP_DEMO_MODE=false
+APP_MAX_REQUEST_SIZE=1048576
+APP_REQUEST_TIMEOUT=30s
+
+# Google Calendar Configuration
+GOOGLE_CALENDAR_ID=primary
 GOOGLE_CALENDAR_SA_JSON=
+GOOGLE_APPLICATION_CREDENTIALS=
 GOOGLE_CALENDAR_READ_ONLY=false
-GOOGLE_CALENDAR_MOCK=false
+
+# Server Configuration
+SERVER_PORT=8080
+SERVER_HOST=0.0.0.0
+SERVER_GIN_MODE=release
+SERVER_ENABLE_TLS=false
+SERVER_READ_TIMEOUT=10s
+SERVER_WRITE_TIMEOUT=10s
+SERVER_IDLE_TIMEOUT=60s
+
+# Logging Configuration
+LOG_LEVEL=info
+LOG_FORMAT=json
+LOG_OUTPUT=stdout
+LOG_ENABLE_CALLER=true
+LOG_ENABLE_STACKTRACE=true
+
+# TLS Configuration (when SERVER_ENABLE_TLS=true)
+TLS_CERT_PATH=
+TLS_KEY_PATH=
+TLS_MIN_VERSION=1.2
+TLS_CIPHER_SUITES=
