refactor: Update Google credentials handling and configuration options
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,11 @@ APP_REQUEST_TIMEOUT=30s
 
 # Google Calendar Configuration
 GOOGLE_CALENDAR_ID=primary
+# Option 1: Provide JSON credentials directly (will be written to a file)
 GOOGLE_CALENDAR_SA_JSON=
+# Option 2: Provide path to existing credentials file (if GOOGLE_CALENDAR_SA_JSON is empty)
+# If GOOGLE_CALENDAR_SA_JSON is provided and GOOGLE_APPLICATION_CREDENTIALS is empty, 
+# defaults to /tmp/google-credentials.json
 GOOGLE_APPLICATION_CREDENTIALS=
 GOOGLE_CALENDAR_READ_ONLY=false
 
