chore: Add timezone configuration for Google Calendar
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ GOOGLE_CALENDAR_SA_JSON=
 # defaults to /tmp/google-credentials.json
 GOOGLE_APPLICATION_CREDENTIALS=
 GOOGLE_CALENDAR_READ_ONLY=false
+GOOGLE_CALENDAR_TIMEZONE=Europe/Berlin
 
 # Server Configuration
 SERVER_PORT=8080
