feat: Implement Inference Gateway LLM Service
- Added InferenceGatewayService to handle natural language processing using the Inference Gateway SDK.
- Introduced methods for processing natural language input, checking service status, and retrieving provider and model information.
- Created a system prompt for calendar operations and defined tools for event management.
- Added mocks for the LLM service to facilitate testing.
- Implemented unit tests for the service methods, covering various scenarios including successful processing, service disabled, and clarification requests.
- Updated go.mod and go.sum to include the Inference Gateway SDK and other dependencies.

Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,39 @@ TLS_CERT_PATH=
 TLS_KEY_PATH=
 TLS_MIN_VERSION=1.2
 TLS_CIPHER_SUITES=
+
+# LLM Configuration (Natural Language Processing)
+# Enable or disable LLM functionality
+LLM_ENABLED=true
+
+# Inference Gateway URL or OpenAI-compatible API endpoint
+LLM_GATEWAY_URL=http://localhost:8080/v1
+
+# LLM Provider - supported providers via Inference Gateway:
+# - openai: OpenAI GPT models
+# - anthropic: Anthropic Claude models  
+# - groq: Groq models (fast inference)
+# - ollama: Local Ollama models
+# - deepseek: DeepSeek models
+# - cohere: Cohere models
+# - cloudflare: Cloudflare Workers AI models
+LLM_PROVIDER=groq
+
+# Model to use (examples for different providers):
+# OpenAI: gpt-4o, gpt-4o-mini, gpt-3.5-turbo
+# Anthropic: claude-3-opus, claude-3-sonnet, claude-3-haiku
+# Groq: deepseek-r1-distill-llama-70b, qwen-2.5-coder-32b, llama-3.1-70b-versatile
+# Ollama: llama3.2, qwen2.5, codellama
+# DeepSeek: deepseek-chat
+# Cohere: command-r-plus, command-r
+# Cloudflare: @cf/meta/llama-3.1-8b-instruct
+LLM_MODEL=deepseek-chat
+
+# Request timeout for LLM calls
+LLM_TIMEOUT=30s
+
+# Maximum tokens to generate
+LLM_MAX_TOKENS=2048
+
+# Temperature for response generation (0.0 = deterministic, 2.0 = very creative)
+LLM_TEMPERATURE=0.7
