fix: Add input validation for message text and enhance error handling in CalendarAgent and InferenceGateway
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/examples/basic/.env.gateway.example
+++ b/examples/basic/.env.gateway.example
@@ -1,3 +1,9 @@
+
+
+A2A_ENABLE=true
+A2A_AGENTS=http://google-calendar-agent:8080
+
+
 # ============================================================================
 # INFERENCE GATEWAY PROVIDER API KEYS
 # ============================================================================
