--- a/examples/basic/.env.agent.example
+++ b/examples/basic/.env.agent.example
@@ -31,9 +31,10 @@ GOOGLE_CALENDAR_TIMEZONE=CET
 # LLM CONFIGURATION
 # ============================================================================
 # LLM Provider selection
+LLM_ENABLED=true
+LLM_GATEWAY_URL=http://inference-gateway:8080
 LLM_PROVIDER=deepseek
 LLM_MODEL=deepseek-chat
-LLM_ENABLED=true
 
 # ============================================================================
 # ADVANCED CONFIGURATION
