--- a/examples/basic/docker-compose.yaml
+++ b/examples/basic/docker-compose.yaml
@@ -1,7 +1,7 @@
 ---
 services:
   inference-gateway:
-    image: ghcr.io/inference-gateway/inference-gateway:latest
+    image: ghcr.io/inference-gateway/inference-gateway:0.10.0-rc.1
     ports:
       - "8080:8080"
     env_file:
@@ -13,7 +13,9 @@ services:
     pull_policy: always
 
   google-calendar-agent:
-    image: ghcr.io/inference-gateway/google-calendar-agent:latest
+    build:
+      context: ../..
+      dockerfile: Dockerfile
     ports:
       - "8081:8080"
     env_file:
