--- a/examples/basic/.env.agent.example
+++ b/examples/basic/.env.agent.example
@@ -42,9 +42,14 @@ LLM_MODEL=deepseek-chat
 # These settings are optional and have sensible defaults
 
 # LLM Settings
-LLM_TIMEOUT=30s
+LLM_TIMEOUT=60s
 LLM_MAX_TOKENS=2048
 LLM_TEMPERATURE=0.7
+
+# Server Settings (Increase timeouts to handle LLM processing time)
+SERVER_READ_TIMEOUT=60s
+SERVER_WRITE_TIMEOUT=60s
+SERVER_REQUEST_TIMEOUT=60s
 
 # Application Settings
 APP_ENVIRONMENT=prod
