--- a/example/docker-compose.yaml
+++ b/example/docker-compose.yaml
@@ -17,6 +17,8 @@ services:
       context: ..
       dockerfile: Dockerfile
     pull_policy: always
+    ports:
+      - "8081:8080"
     env_file:
       - .env.agent
     restart: unless-stopped
