chore: Update A2A dependency to v0.2.0-rc.3 and improve go mod tidy command
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -22,7 +22,7 @@ tasks:
     desc: "Run go mod tidy to clean up dependencies"
     cmds:
       - echo "Running go mod tidy..."
-      - go mod tidy
+      - find . -name go.mod -execdir go mod tidy \;
 
   lint:
     desc: "Run linters on the codebase"
