refactor: Use Inference Gateway A2A ADK (#6)
* refactor(project): Start using the Inference Gateway ADK

Removing a lot of non-business code related (previously it was mainly focused on how to build a2a agent, now it's more with the specific of the google-calendar's business logic).

Signed-off-by: Eden Reich <eden.reich@gmail.com>

* refactor: Rename examples to example

Only one example is fine for now.

Signed-off-by: Eden Reich <eden.reich@gmail.com>

* refactor: Remove commented-out error handling in main and test files

Signed-off-by: Eden Reich <eden.reich@gmail.com>

* refactor: Remove unnecessary comments in agent and config test files

TODO - I should probably keep the generated the A2A Go types since they help a lot in defining the AgentCard for example and the different aspects of A2A.

Signed-off-by: Eden Reich <eden.reich@gmail.com>

* refactor: Remove unnecessary comments in logger configuration

Signed-off-by: Eden Reich <eden.reich@gmail.com>

* chore: Add initial TODOs for A2A types and agent template generation

Signed-off-by: Eden Reich <eden.reich@gmail.com>

* refactor: Add the generated_types.go back

Signed-off-by: Eden Reich <eden.reich@gmail.com>

* feat: Improve compile safety with type safe objects from A2A

Signed-off-by: Eden Reich <eden.reich@gmail.com>

* refactor: Refactor Google Calendar Agent to use new tools and improve configuration handling

- Updated main.go to create Google Calendar tools and register them with the server's toolbox.
- Enhanced server configuration to include LLM client settings and debug mode.
- Removed debug mode from AppConfig and adjusted related methods to check debug status based on logging level.
- Updated configuration tests to reflect changes in debug handling and environment settings.
- Cleaned up example environment files and README to remove references to deprecated debug settings.
- Updated dependencies in go.mod and go.sum to latest versions for improved stability and performance.

Signed-off-by: 

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -10,28 +10,19 @@ tasks:
   a2a:download:schema:
     desc: "Download the latest A2A schema and convert to YAML"
     cmds:
-      - curl -o a2a/a2a-schema.json https://raw.githubusercontent.com/google-a2a/A2A/main/specification/json/a2a.json
-      - |
-        echo "Converting A2A JSON schema to YAML format"
-        NODE_PATH=/usr/lib/node_modules node -e "
-          const fs = require('fs');
-          const yaml = require('js-yaml');
-          const json = JSON.parse(fs.readFileSync('a2a/a2a-schema.json', 'utf8'));
-          fs.writeFileSync('a2a/a2a-schema.yaml', yaml.dump(json, {lineWidth: -1}));
-        "
+      - mkdir -p a2a
+      - curl -o a2a/schema.yaml https://raw.githubusercontent.com/inference-gateway/schemas/refs/heads/main/a2a/a2a-schema.yaml
 
   generate:
     desc: "Generate Go code from the official A2A JSON RPC Schema"
     cmds:
-      - echo "Generating Go code from JSON RPC Schema..."
-      - go run cmd/codegen/main.go -output a2a/generated_types.go
-      - go generate ./...
+      - go run github.com/inference-gateway/tools/cmd/generator@v0.1.1 -generator jsonrpc -package a2a a2a/schema.yaml a2a/generated_types.go
 
   tidy:
     desc: "Run go mod tidy to clean up dependencies"
     cmds:
       - echo "Running go mod tidy..."
-      - go mod tidy
+      - find . -name go.mod -execdir go mod tidy \;
 
   lint:
     desc: "Run linters on the codebase"
@@ -47,13 +38,13 @@ tasks:
         VERSION=$(git describe --tags --always --dirty)
         COMMIT=$(git rev-parse HEAD)
         DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
-        go build -ldflags "-X main.version=${VERSION} -X main.commit=${COMMIT} -X main.date=${DATE}" -o bin/google-calendar-agent cmd/google-calendar-agent/main.go
+        go build -ldflags "-X main.version=${VERSION} -X main.commit=${COMMIT} -X main.date=${DATE}" -o dist/agent ./cmd/agent
 
   build:dev:
     desc: "Build the project for development (no version information)"
     cmds:
       - echo "Building the project for development..."
-      - go build -o bin/google-calendar-agent cmd/google-calendar-agent/main.go
+      - go build -o dist/agent ./cmd/agent
 
   build:docker:
     desc: "Build the Docker image with version information"
@@ -67,8 +58,8 @@ tasks:
           --build-arg VERSION="${VERSION}" \
           --build-arg COMMIT="${COMMIT}" \
           --build-arg DATE="${DATE}" \
-          -t google-calendar-agent:latest \
-          -t google-calendar-agent:${VERSION} \
+          -t ghcr.io/inference-gateway/google-calendar-agent:latest \
+          -t ghcr.io/inference-gateway/google-calendar-agent:${VERSION} \
           .
 
   test:
@@ -77,16 +68,15 @@ tasks:
       - echo "Running tests..."
       - go test ./...
 
-  test:converage:
+  test:coverage:
     desc: "Run tests with coverage"
     cmds:
       - echo "Running tests with coverage..."
-      - go test -coverprofile=coverage.out ./google && go tool cover -func=coverage.out
+      - go test -cover ./...
 
   clean:
     desc: "Clean up build artifacts"
     cmds:
       - echo "Cleaning up..."
-      - rm -rf bin/
-      - rm -f *.out
       - rm -rf dist/
+      - rm -f *.out
