--- a/example/docker-compose.yaml
+++ b/example/docker-compose.yaml
@@ -1,7 +1,8 @@
 ---
 services:
   inference-gateway:
-    image: ghcr.io/inference-gateway/inference-gateway:0.10.0
+    image: ghcr.io/inference-gateway/inference-gateway:0.11.2
+    pull_policy: always
     ports:
       - "8080:8080"
     env_file:
@@ -10,14 +11,35 @@ services:
       google-calendar-agent-healthcheck:
         condition: service_healthy
     restart: unless-stopped
-    pull_policy: always
+    networks:
+      - a2a-network
 
   google-calendar-agent:
-    image: ghcr.io/inference-gateway/google-calendar-agent:0.2.0
+    build:
+      context: ..
+      dockerfile: Dockerfile
+    pull_policy: always
+    ports:
+      - "8081:8080"
     env_file:
       - .env.agent
     restart: unless-stopped
-    pull_policy: always
+    networks:
+      - a2a-network
+
+  a2a-client:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    stdin_open: true
+    tty: true
+    env_file:
+      - client/.env
+    depends_on:
+      google-calendar-agent-healthcheck:
+        condition: service_healthy
+    networks:
+      - a2a-network
 
   google-calendar-agent-healthcheck:
     image: curlimages/curl:latest
@@ -39,3 +61,9 @@ services:
       google-calendar-agent:
         condition: service_started
     restart: unless-stopped
+    networks:
+      - a2a-network
+
+networks:
+  a2a-network:
+    driver: bridge
