feat: Add exec plugin for version update and include agent.go in release assets
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,6 +58,7 @@ jobs:
             conventional-changelog-cli \
             conventional-changelog-conventionalcommits \
             @semantic-release/changelog \
+            @semantic-release/exec \
             @semantic-release/git \
             @semantic-release/github
 
