--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -49,6 +49,15 @@ plugins:
       changelogTitle: "# Changelog\n\nAll notable changes to this project will be documented in this file."
       verifyConditions: true
 
+  - - "@semantic-release/exec"
+    - prepareCmd: 'sed -i ''s/^Version:     .*$/Version:     "${nextRelease.version}"/'' a2a/agent.go'
+
+  - - "@semantic-release/git"
+    - assets:
+        - CHANGELOG.md
+        - a2a/agent.go
+      message: "chore(release): 🔖 ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+
   - - "@semantic-release/github"
     - assets:
         - CHANGELOG.md
@@ -59,8 +68,3 @@ plugins:
       labels:
         - "release"
         - "<%= nextRelease.channel === 'rc' ? 'rc' : '' %>"
-
-  - - "@semantic-release/git"
-    - assets:
-        - CHANGELOG.md
-      message: "chore(release): 🔖 ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
