--- a/Dockerfile.goreleaser
+++ b/Dockerfile.goreleaser
@@ -7,6 +7,7 @@ RUN upx --best --lzma /artifacts/agent
 
 FROM gcr.io/distroless/static-debian12:nonroot
 COPY --from=builder /artifacts/agent /google-calendar-agent
+COPY .well-known/agent.json .well-known/agent.json
 USER nonroot:nonroot
 EXPOSE 8080
 ENTRYPOINT ["/google-calendar-agent"]
