fix: Add extra_files section for agent.json in Docker configurations
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -49,6 +49,8 @@ dockers:
       - "--label=org.opencontainers.image.title={{ .ProjectName }}"
       - "--label=org.opencontainers.image.revision={{ .FullCommit }}"
       - "--label=org.opencontainers.image.version={{ .Version }}"
+    extra_files:
+      - .well-known/agent.json
 
   - id: google-calendar-agent-arm64
     goos: linux
@@ -65,6 +67,8 @@ dockers:
       - "--label=org.opencontainers.image.title={{ .ProjectName }}"
       - "--label=org.opencontainers.image.revision={{ .FullCommit }}"
       - "--label=org.opencontainers.image.version={{ .Version }}"
+    extra_files:
+      - .well-known/agent.json
 
 docker_manifests:
   - name_template: ghcr.io/inference-gateway/google-calendar-agent:{{ .Version }}
