refactor: Integrate LLM client and update environment configuration for A2A agent
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/example/docker-compose.yaml
+++ b/example/docker-compose.yaml
@@ -15,7 +15,8 @@ services:
       - a2a-network
 
   google-calendar-agent:
-    image: ghcr.io/inference-gateway/google-calendar-agent:latest
+    build:
+      context: ..
     pull_policy: always
     env_file:
       - .env.agent
