--- a/example/.env.agent.example
+++ b/example/.env.agent.example
@@ -1,6 +1,8 @@
 # Google Calendar Agent with Inference Gateway - Environment Configuration
 # Copy this file to .env and configure the values for your setup
 
+A2A_AGENT_URL=http://localhost:8080
+
 # ============================================================================
 # DEMO MODE CONFIGURATION
 # ============================================================================
@@ -31,10 +33,9 @@ GOOGLE_CALENDAR_TIMEZONE=CET
 # LLM CONFIGURATION
 # ============================================================================
 # LLM Provider selection
-LLM_ENABLED=true
-LLM_GATEWAY_URL=http://inference-gateway:8080/v1
-LLM_PROVIDER=deepseek
-LLM_MODEL=deepseek-chat
+A2A_AGENT_CLIENT_BASE_URL=http://inference-gateway:8080/v1
+A2A_AGENT_CLIENT_PROVIDER=deepseek
+A2A_AGENT_CLIENT_MODEL=deepseek-chat
 
 # ============================================================================
 # ADVANCED CONFIGURATION
