--- a/example/docker-compose.yaml
+++ b/example/docker-compose.yaml
@@ -7,9 +7,6 @@ services:
       - "8080:8080"
     env_file:
       - .env.gateway
-    depends_on:
-      google-calendar-agent-healthcheck:
-        condition: service_healthy
     restart: unless-stopped
     networks:
       - a2a-network
@@ -24,45 +21,37 @@ services:
     networks:
       - a2a-network
 
-  google-calendar-agent-healthcheck:
-    image: curlimages/curl:latest
-    entrypoint:
-      - sh
-      - -c
-      - "while true; do sleep 30; done"
-    healthcheck:
-      test:
-        - CMD
-        - curl
-        - -f
-        - http://google-calendar-agent:8080/health
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-    depends_on:
-      google-calendar-agent:
-        condition: service_started
-    restart: unless-stopped
+  cli:
+    image: ghcr.io/inference-gateway/cli:latest
+    pull_policy: always
+    environment:
+      INFER_LOGGING_DEBUG: true
+      INFER_GATEWAY_URL: http://inference-gateway:8080
+      INFER_A2A_ENABLED: true
+      INFER_TOOLS_ENABLED: true
+      INFER_TOOLS_QUERY_ENABLED: true
+      INFER_TOOLS_TASK_ENABLED:  true
+      INFER_AGENT_MODEL: deepseek/deepseek-chat
+      INFER_A2A_AGENTS: 'http://google-calendar-agent:8080'
+      INFER_A2A_CACHE_ENABLED: false
+    command:
+      - chat
     networks:
       - a2a-network
+    profiles:
+      - manual
 
   a2a-debugger:
     image: ghcr.io/inference-gateway/a2a-debugger:latest
     pull_policy: always
     entrypoint:
       - /a2a
-      - --config
-      - /config/.a2a.yaml
-    command:
-      - config
-      - set
-      - server-url
+      - --set-url
       - http://google-calendar-agent:8080
-    volumes:
-      - ./config:/config
     networks:
       - a2a-network
+    profiles:
+      - manual
 
 networks:
   a2a-network:
