fix: Correct entrypoint argument from --set-url to --server-url in a2a-debugger service
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/example/docker-compose.yaml
+++ b/example/docker-compose.yaml
@@ -45,7 +45,7 @@ services:
     pull_policy: always
     entrypoint:
       - /a2a
-      - --set-url
+      - --server-url
       - http://google-calendar-agent:8080
     networks:
       - a2a-network
