--- a/example/.env.agent.example
+++ b/example/.env.agent.example
@@ -4,10 +4,10 @@
 A2A_AGENT_URL=http://localhost:8080
 
 # ============================================================================
-# DEMO MODE CONFIGURATION
+# MOCK MODE CONFIGURATION  
 # ============================================================================
-# Set to true to run in demo mode without real Google Calendar integration
-DEMO_MODE=false
+# Set to true to run in mock mode without real Google Calendar integration
+GOOGLE_MOCK_MODE=false
 
 # ============================================================================
 # GOOGLE CALENDAR CONFIGURATION
@@ -17,7 +17,7 @@ GOOGLE_CALENDAR_ID=primary
 
 # Method 1: Service Account JSON (recommended for production)
 # Paste your Google Service Account JSON content here (single line)
-GOOGLE_CALENDAR_SA_JSON=
+GOOGLE_SERVICE_ACCOUNT_JSON=
 
 # Method 2: Credentials file path (alternative to JSON)
 # Path to your Google credentials file
