refactor: Upgrade Go version to 1.25.0 and update dependencies
- Updated Dockerfile to use Go 1.25.0 base image.
- Modified .flox environment manifest to specify Go version 1.25.0.
- Updated GitHub Actions workflows to set up Go 1.25.0.
- Adjusted CI/CD configurations to accommodate new Go version.
- Refactored agent.yaml to include Google Calendar configuration under a new section.
- Updated README.md and example files to reflect changes in environment variables and configuration.
- Removed outdated example environment files and added a new .env.example.
- Enhanced logging and error handling in main.go and internal services.
- Updated go.mod to reflect the new Go version and cleaned up toolchain specifications.

Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/agent.yaml
+++ b/agent.yaml
@@ -9,7 +9,7 @@ spec:
     streaming: true
     pushNotifications: false
     stateTransitionHistory: false
-  dependencies:
+  services:
     google:
       type: service
       interface: CalendarService
@@ -233,17 +233,19 @@ spec:
       Your responses should be accurate, helpful, and focused on calendar management tasks.
   config:
     google:
-      calendarId: "primary"
-      mockMode: false
       serviceAccountJson: ""
       credentialsPath: ""
+    googleCalendar:
+      Id: "primary"
+      mockMode: false
+      timezone: "UTC"
   server:
     port: 8080
     debug: false
   language:
     go:
       module: github.com/inference-gateway/google-calendar-agent
-      version: "1.24"
+      version: "1.25.0"
   acronyms:
     - a2a
     - api
