--- a/example/docker-compose.yaml
+++ b/example/docker-compose.yaml
@@ -3,8 +3,23 @@ services:
   google-calendar-agent:
     build:
       context: ..
-    env_file:
-      - .env.agent
+    environment:
+      ENVIRONMENT: development
+      A2A_AGENT_URL: http://google-calendar-agent:8080
+      A2A_AGENT_CLIENT_PROVIDER: deepseek
+      A2A_AGENT_CLIENT_MODEL: deepseek-chat
+      A2A_AGENT_CLIENT_BASE_URL: http://inference-gateway:8080/v1
+      A2A_SERVER_READ_TIMEOUT: 120s
+      A2A_SERVER_WRITE_TIMEOUT: 120s
+      A2A_SERVER_IDLE_TIMEOUT: 120s
+      A2A_AGENT_CLIENT_TIMEOUT: 120s
+      A2A_QUEUE_CLEANUP_INTERVAL: 500s
+      A2A_AGENT_CLIENT_MAX_CHAT_COMPLETION_ITERATIONS: 20
+      GOOGLE_SERVICE_ACCOUNT_JSON: ${GOOGLE_SERVICE_ACCOUNT_JSON}
+      GOOGLE_CREDENTIALS_PATH: /tmp/google-credentials.json
+      GOOGLE_CALENDAR_MOCK_MODE: false
+      GOOGLE_CALENDAR_ID: ${GOOGLE_CALENDAR_ID}
+      GOOGLE_CALENDAR_TIMEZONE: CET
     restart: unless-stopped
     networks:
       - a2a-network
@@ -14,8 +29,26 @@ services:
     pull_policy: always
     ports:
       - "8080:8080"
-    env_file:
-      - .env.gateway
+    environment:
+      ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY}
+      CLOUDFLARE_API_KEY: ${CLOUDFLARE_API_KEY}
+      COHERE_API_KEY: ${COHERE_API_KEY}
+      GROQ_API_KEY: ${GROQ_API_KEY}
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
+      DEEPSEEK_API_KEY: ${DEEPSEEK_API_KEY}
+      GOOGLE_API_KEY: ${GOOGLE_API_KEY}
+      MISTRAL_API_KEY: ${MISTRAL_API_KEY}
+      ENVIRONMENT: development
+      SERVER_HOST: 0.0.0.0
+      SERVER_PORT: 8080
+      SERVER_READ_TIMEOUT: 230s
+      SERVER_WRITE_TIMEOUT: 230s
+      SERVER_IDLE_TIMEOUT: 220s
+      CLIENT_TIMEOUT: 230s
+      CLIENT_MAX_IDLE_CONNS: 220
+      CLIENT_MAX_IDLE_CONNS_PER_HOST: 220
+      CLIENT_IDLE_CONN_TIMEOUT: 130s
+      CLIENT_RESPONSE_HEADER_TIMEOUT: 120s
     restart: unless-stopped
     networks:
       - a2a-network
@@ -30,8 +63,20 @@ services:
       INFER_TOOLS_ENABLED: true
       INFER_TOOLS_QUERY_ENABLED: true
       INFER_TOOLS_TASK_ENABLED:  true
+      INFER_TOOLS_BASH_ENABLED: false
+      INFER_TOOLS_TODO_WRITE_ENABLED: false
+      INFER_TOOLS_WRITE_ENABLED: false
+      INFER_TOOLS_READ_ENABLED: false
+      INFER_TOOLS_DELETE_ENABLED: false
+      INFER_TOOLS_EDIT_ENABLED: false
+      INFER_TOOLS_GREP_ENABLED: false
+      INFER_TOOLS_TREE_ENABLED: false
+      INFER_TOOLS_WEB_FETCH_ENABLED: false
+      INFER_TOOLS_WEB_SEARCH_ENABLED: false
+      INFER_TOOLS_GITHUB_ENABLED: false
       INFER_AGENT_MODEL: deepseek/deepseek-chat
-      INFER_A2A_AGENTS: 'http://google-calendar-agent:8080'
+      INFER_A2A_AGENTS: |
+        http://google-calendar-agent:8080
       INFER_A2A_CACHE_ENABLED: false
     command:
       - chat
