--- a/example/docker-compose.yaml
+++ b/example/docker-compose.yaml
@@ -6,8 +6,8 @@ services:
     environment:
       ENVIRONMENT: development
       A2A_AGENT_URL: http://google-calendar-agent:8080
-      A2A_AGENT_CLIENT_PROVIDER: deepseek
-      A2A_AGENT_CLIENT_MODEL: deepseek-chat
+      A2A_AGENT_CLIENT_PROVIDER: ${PROVIDER:-deepseek}
+      A2A_AGENT_CLIENT_MODEL: ${MODEL:-deepseek-chat}
       A2A_AGENT_CLIENT_BASE_URL: http://inference-gateway:8080/v1
       A2A_SERVER_READ_TIMEOUT: 120s
       A2A_SERVER_WRITE_TIMEOUT: 120s
@@ -74,7 +74,7 @@ services:
       INFER_TOOLS_WEB_FETCH_ENABLED: false
       INFER_TOOLS_WEB_SEARCH_ENABLED: false
       INFER_TOOLS_GITHUB_ENABLED: false
-      INFER_AGENT_MODEL: deepseek/deepseek-chat
+      INFER_AGENT_MODEL: ${PROVIDER:-deepseek}/${MODEL:-deepseek-chat}
       INFER_A2A_AGENTS: |
         http://google-calendar-agent:8080
       INFER_A2A_CACHE_ENABLED: false
